--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">Essential</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/ronaldlopez/essential" class="btn">View on GitHub</a>
-      <a href="https://github.com/ronaldlopez/essential/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/ronaldlopez/essential/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/ronaldlopez/essential" class="btn">One</a>
+      <a href="https://github.com/ronaldlopez/essential/zipball/master" class="btn">Two</a>
+      <a href="https://github.com/ronaldlopez/essential/tarball/master" class="btn">Three</a>
     </section>
 
     <section class="main-content">
