--- a/index.html
+++ b/index.html
@@ -861,7 +861,10 @@
 					<h4 class="w-iconbox-title">Acupuntura</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						Es una ciencia milenaria original de la China y forma parte de la Medicina Tradicional China.
+						Se basa en la estimulación de unos puntos que se pueden localizar en todo el cuerpo.
+					</p>
 				</div>
 			</div> </div>
 			<div class="one-third"> <div class="w-iconbox iconpos_left with_circle">
@@ -872,7 +875,9 @@
 					<h4 class="w-iconbox-title">Meditación</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Working with us you will work with professional certified designers and engineers having the vast good experience. </p>
+					<p>
+						 El objetivo principal de la meditación es concentrarse y poco a poco relajar la mente hasta liberar la conciencia.
+					</p>
 				</div>
 			</div> </div>
 			<div class="one-third"> <div class="w-iconbox iconpos_left with_circle">
@@ -883,7 +888,10 @@
 					<h4 class="w-iconbox-title">Masaje terapéutico</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						Los masajes representan antigua herramienta terapéutica, que el ser humano ha utilizado para
+						proporcionar y proporcionarse un recurso natural para el dolor.
+					</p>
 				</div>
 			</div> </div>
 		</div>
@@ -901,7 +909,11 @@
 					<h4 class="w-iconbox-title">Fitoterapia</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						Emplear las plantas medicinales con fines curativos es una práctica que se ha utilizado desde
+						tiempo inmemorial. Durante mucho tiempo los remedios naturales, fueron uno de los principales
+						recursos de que disponían la humanidad.
+					</p>
 				</div>
 			</div> </div>
 			<div class="one-third"> <div class="w-iconbox iconpos_left with_circle">
@@ -912,7 +924,10 @@
 					<h4 class="w-iconbox-title">Moxibustion</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Working with us you will work with professional certified designers and engineers having the vast good experience. </p>
+					<p>
+						Moxibustión es una técnica dentro de la Medicina Tradiconal China donde se utiliza el calor de la
+						artemisa para sanar.
+					</p>
 				</div>
 			</div> </div>
 			<div class="one-third"> <div class="w-iconbox iconpos_left with_circle">
@@ -923,7 +938,10 @@
 					<h4 class="w-iconbox-title">Tai-chi</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						La práctica regular del tai chi chuan tiene diversos efectos positivos sobre 
+						variados aspectos de la salud física y psíquica.
+					</p>
 				</div>
 			</div> </div>
 		</div>
@@ -941,7 +959,10 @@
 					<h4 class="w-iconbox-title">Kinesiotape</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						El vendaje neuromuscular o kinesiotaping consiste en cintas de algodón con un adhesivo acrílico 
+						usadas para tratar lesiones de atletas y otros trastornos físicos.
+					</p>
 				</div>
 			</div> 
 		</div>
@@ -953,7 +974,9 @@
 				<h4 class="w-iconbox-title">Auriculoterapia</h4>
 			</div>
 			<div class="w-iconbox-text">
-				<p> Working with us you will work with professional certified designers and engineers having the vast good experience. </p>
+				<p>
+					La auriculoterapia tiene los mismos principios médicos que la acupuntura, pero se centra únicamente en la oreja y en la cartografía auricular.
+				</p>
 			</div>
 		</div> </div>
 		<div class="one-third">
@@ -965,7 +988,11 @@
 					<h4 class="w-iconbox-title">Reflexoligia Podal</h4>
 				</div>
 				<div class="w-iconbox-text">
-					<p> Creating a design it is not an end in itself, but a means. We understand the rules of the games. It’s about to make you happy. </p>
+					<p>
+						Reflexología Podal es una terapia manual, y como terapia de regulación que es, tiene una acción
+						sobre todo el cuerpo en su conjunto actuando de manera individual y apoyando las fuerzas de
+						autocuración presentes en cada persona.
+					</p>
 				</div>
 			</div> 
 		</div>
