--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
 											</div>
 											<div class="w-contacts-item">
 												<i class="fa fa-envelope"></i>
-												<span class="w-contacts-item-value">&nbsp;<a href="mailto:info@example.com">info@example.com</a> </span>
+												<span class="w-contacts-item-value">&nbsp;<a href="mailto:esenciaterapiass@gmail.com">esenciaterapiass@gmail.com</a> </span>
 											</div>
 										</div>
 									</div>
